Fixed "Title jumps to the next line, out of the toolbar #508"

--- a/packages/mdc-toolbar/mdc-toolbar.scss
+++ b/packages/mdc-toolbar/mdc-toolbar.scss
@@ -98,3 +98,7 @@ $mdc-toolbar-mobile-breakpoint: 599px;
     margin-top: $mdc-toolbar-mobile-row-height;
   }
 }
+
+.mdc-toolbar__section-shrink-to-fit {
+  flex: none;
+}
